--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,17 @@ asgiref==3.8.1
 attrs==25.1.0
 autobahn==24.4.2
 Automat==24.8.1
+certifi==2025.1.31
 cffi==1.17.1
 channels==4.2.0
+charset-normalizer==3.4.1
 constantly==23.10.4
 crispy-bootstrap5==2024.10
 cryptography==44.0.0
 daphne==4.1.2
 dj-database-url==0.5.0
 Django==4.2.18
+django-allauth==65.3.1
 django-crispy-forms==2.3
 django-heroku==0.3.1
 gunicorn==20.1.0
@@ -20,7 +23,9 @@ psycopg2==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
+PyJWT==2.10.1
 pyOpenSSL==25.0.0
+requests==2.32.3
 service-identity==24.2.0
 setuptools==75.8.0
 SQLAlchemy==2.0.37
@@ -28,5 +33,6 @@ sqlparse==0.5.3
 Twisted==24.11.0
 txaio==23.1.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 whitenoise==6.8.2
 zope.interface==7.2
